Bug 595317: Scrollbars don't appear in the details view. r=Unfocused, a=blocks-final

--- a/toolkit/mozapps/extensions/content/extensions.css
+++ b/toolkit/mozapps/extensions/content/extensions.css
@@ -108,7 +108,7 @@ xhtml|link {
 }
 
 #detail-view {
-  overflow-y: auto;
+  overflow: auto;
 }
 
 .addon:not([notification="warning"]) .warning,
